# kitcar-gazebo-simulation

./: .clang-format  .clang-tidy  .coveragerc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .isort.cfg  .lsan_supressions  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  README.rst  check_formatting.sh  data.dvc  generate_dr_drift.sh  index.rst  packages.txt  pyproject.toml  requirements.txt  setup_clang.sh
etc/keyframe_plugin/: CMakeLists.txt  keyframes.cc
simulation/src/: CMakeLists.txt
simulation/src/gazebo_simulation/: CMakeLists.txt  index.rst  package.xml  setup.py
simulation/src/gazebo_simulation/launch/: automatic_drive.launch  car_state_node.launch  gazebo_rate_control_node.launch  master.launch  record_random_drive.launch  road_editor.launch  spawn_car.launch  world.launch
simulation/src/gazebo_simulation/msg/: CarState.msg  SetModelPose.msg  SetModelTwist.msg
simulation/src/gazebo_simulation/res/: simulation.rviz
simulation/src/gazebo_simulation/scripts/: automatic_drive_node  car_state_node  car_state_visualization_node  gazebo_rate_control_node  generate_dr_drift
simulation/src/gazebo_simulation/test/: test_automatic_drive  test_car_model_generation  test_car_state_node  test_model_plugin  test_model_plugin_link
simulation/src/simulation_brain_link/: CMakeLists.txt  index.rst  package.xml  setup.py
simulation/src/simulation_brain_link/launch/: brain.launch  jetson.launch  sensor_camera_node.launch  sensor_camera_node_deprecated.launch  vehicle_link.launch  vehicle_simulation_link.launch
simulation/src/simulation_brain_link/msg/: MissionMode.msg  State.msg
simulation/src/simulation_brain_link/scripts/: sensor_camera_node  sensor_tof_node  vehicle_simulation_link_node
simulation/src/simulation_brain_link/test/: test_sensor_camera  test_vehicle_simulation_link_node
simulation/src/simulation_evaluation/: CMakeLists.txt  package.xml  setup.py
simulation/src/simulation_evaluation/launch/: drive_test.launch  evaluation.launch  evaluation_test.launch  referee_node.launch  sign_evaluation_node.launch  speaker_node.launch  state_machine_node.launch
simulation/src/simulation_evaluation/msg/: Broadcast.msg  Referee.msg  SignEvaluation.msg  Speaker.msg  State.msg  TrafficSign.msg  TrafficSigns.msg
simulation/src/simulation_evaluation/scripts/: drive_test_node  evaluation_test_node  referee_node  sign_evaluation_node  speaker_node  state_machine_node
simulation/src/simulation_evaluation/test/: drive_test  test_referee_node  test_sign_evaluation_node  test_speaker_node  test_state_machine_node
simulation/src/simulation_groundtruth/: CMakeLists.txt  package.xml  setup.py
simulation/src/simulation_groundtruth/launch/: camera_image_transformation.launch  groundtruth_mock_node.launch  groundtruth_node.launch  label_camera_node.launch  scan_node.launch
simulation/src/simulation_groundtruth/msg/: GroundtruthStatus.msg  ImageLabels.msg  LabeledBoundingBox.msg  LabeledPolygon.msg  Lane.msg  Parking.msg  Section.msg
simulation/src/simulation_groundtruth/scripts/: camera_image_transformation  groundtruth_mock_node  groundtruth_node  groundtruth_visualization_node  label_camera_node  scan_node
simulation/src/simulation_groundtruth/srv/: LaneSrv.srv  (+4 more)
simulation/src/simulation_onboarding/: CMakeLists.txt  package.xml  setup.py
simulation/src/simulation_rqt/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/: CMakeLists.txt
src/gazebo-simulation/: CMakeLists.txt  nodelet_plugins.xml  package.xml  setup.py
src/gazebo-simulation/launch/: gazebo_simulation.launch  pre_cropping_node.launch  segmentation_node.launch  simulation_brain.launch  simulation_groundtruth.launch  world.launch
src/gazebo-simulation/scripts/: automatic_simulation_test  car_state_node  drive_logger_node  groundtruth_node  start_simulation_groundtruth.py
src/gazebo-simulation/test/: simulation_test.test  test_tof_sensor_emulation.cpp
src/gazebo_groundtruth/: CMakeLists.txt  package.xml  setup.py
src/gazebo_groundtruth/launch/: groundtruth.launch
src/gazebo_groundtruth/scripts/: automatic_simulation_test  car_state_node  drive_logger_node  groundtruth_node  tf_sim_world_node  update_sys_path.py
src/gazebo_groundtruth/test/: road.test
src/gazebo_simulation/: CMakeLists.txt  index.rst  nodelet_plugins.xml  package.xml  setup.py  setup.sh
src/gazebo_simulation/launch/: brain.launch  car_state_node.launch  gazebo_timer_node.launch  master.launch  model_interface_node.launch  road.launch  sensor_camera_node.launch  sensor_tof_node.launch  simulation_brain.launch  simulation_brain_link.launch  tof_sensor_emulation_node.launch
src/gazebo_simulation/msg/: CarStateMsg.msg  SetModelTwist.msg
src/gazebo_simulation/res/: simulation.rviz
src/gazebo_simulation/scripts/: car_state_node  car_state_visualization_node  gazebo_timer_node  model_interface_node  start_test
src/gazebo_simulation/srv/: GetModelPose.srv  GetModelTwist.srv  SetModelPose.srv  SetModelTwist.srv
src/gazebo_simulation/test/: start_road.test  test_car_state_node  test_model_interface_node  test_sensor_camera.cpp
src/model_plugins/vehicle_simulation_link/: CMakeLists.txt  vehicle_simulation_link.h
src/pre_cropping/: CMakeLists.txt  pre_cropping_node.cpp  pre_cropping_node.h
src/simulation_brain_link/: CMakeLists.txt  package.xml  setup.py
src/simulation_brain_link/launch/: sensor_tof_node.launch
src/simulation_brain_link/scripts/: vehicle_simulation_link_node
src/simulation_evaluation/: CMakeLists.txt  package.xml  setup.py
src/simulation_evaluation/scripts/: automatic_simulation_test  car_state_node  drive_logger_node
src/simulation_evaluation/test/: road.test
src/simulation_groundtruth/: CMakeLists.txt  package.xml  setup.py
src/simulation_groundtruth/launch/: groundtruth.launch
src/simulation_groundtruth/msg/: RoadSectionMsg.msg
src/simulation_groundtruth/scripts/: groundtruth_node  visualization_node  visualization_node_test
src/tof_sensor_emulation/: CMakeLists.txt  tof_sensor_emulation.cpp  tof_sensor_emulation.h  tof_sensor_emulation_node.h
(+825 files in other folders)
