<?xml version="1.0"?>
<package format="2">
  <name>gazebo_simulation</name>
  <version>0.0.0</version>
  <description>The gazebo_simulation package</description>

  <maintainer email="fabian.reister@posteo.de">Fabian Reister</maintainer>
  <url>https://wiki.kitcar-team.de/doku.php?id=konzept_und_umsetzung:gazebo_simulation:start</url>

  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/gazebo_simulation</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo-plugins</depend>
  <depend>roscpp</depend>
  <depend>eigen</depend>
  <depend>common</depend>
  <depend>state_estimation_msgs</depend>
  <depend>control_debug</depend>
  <depend>mission_control</depend>
  <depend>perception</depend>
  <depend>rqt_mission_mode</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" />
    <gazebo_ros gazebo_media_path="${prefix}/data:${prefix}/media" />
    <gazebo_ros gazebo_model_path="${prefix}/data/models/vehicles:${prefix}/data/models/sensors:${prefix}/data/models/misc:${prefix}/data/models/objects" />
    <gazebo_ros gazebo_resource_path="${prefix}/data" />
  </export>
</package>
