<?xml version="1.0"?>
<package format="2">
  <name>gazebo_simulation</name>
  <version>0.0.0</version>
  <description>The gazebo_simulation package</description>

  <maintainer email="kitcar-organisation@lists.kit.edu">KITcar</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>  
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo-plugins</depend>
  <depend>roscpp</depend>
  <depend>eigen</depend>
  <depend>opencv</depend>
  <depend>common</depend>
  <depend>state_estimation_msgs</depend>
  <depend>control_debug</depend>
  <depend>mission_control</depend>
  <depend>perception</depend>
  <depend>rqt_mission_mode</depend>
  <!-- The export tag contains other, unspecified, tags -->
</package>
