<?xml version="1.0"?>
<package format="2">
  <name>gazebo_simulation</name>
  <version>1.0.0</version>
  <description>The gazebo_simulation package</description>

  <maintainer email="kitcar-simulation@lists.kit.edu">KITcar Simulation</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>genmsgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>image_transport</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <test_depend>rostest</test_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo-plugins</depend>
  <depend>roscpp</depend>
  <depend>eigen</depend>
  <!-- The export tag contains other, unspecified, tags -->
</package>
