<?xml version="1.0"?>
<package format="2">
  <name>simulation_brain_link</name>
  <version>1.0.0</version>
  <description>The simulation_brain_link package</description>

  <maintainer email="kitcar-simulation@lists.kit.edu">KITcar Simulation</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>eigen</depend>
  <depend>opencv</depend>
</package>
