<?xml version="1.0"?>
<package format="2">
  <name>simulation_evaluation</name>
  <version>0.0.0</version>
  <description>The simulation_evaluation package</description>

  <maintainer email="kitcar-simulation@lists.kit.edu">KITcar Simulation</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>simulation_groundtruth</depend>
  <build_depend>rostest</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
</package>
