<?xml version="1.0"?>
<package format="2">
  <name>simulation_onboarding</name>
  <version>0.0.0</version>
  <description>The simulation_onboarding package</description>

  <maintainer email="kitcar-simulation@lists.kit.edu">KITcar Simulation</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>genmsgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rostest</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
