<?xml version="1.0"?>
<package format="2">
  <name>simulation_rqt</name>
  <version>0.0.0</version>
  <description>The simulation_rqt package</description>

  <maintainer email="kitcar-simulation@lists.kit.edu">KITcar Simulation</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>simulation_groundtruth</build_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
